# fsh-funds-v2

./: .replit  README.md  replit.md
backend/: .env.example  .gitignore  README.md  local_dev.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8c7dc72df793_initial_migration_users_and_donor_.py
backend/api/: main.py
backend/api/dependencies/: auth.py  database.py
backend/api/routers/: auth.py  users.py
backend/api/routers/donors/: __init__.py  donors.py
backend/api/services/donors/: __init__.py  donor_service.py
backend/api/utils/: logger.py
backend/models/: base.py  user.py
backend/models/donors/: __init__.py  communication.py  donor.py  gift.py  tag.py
backend/repositories/: __init__.py  base.py
backend/repositories/donors/: __init__.py  donor_repository.py
backend/tests/: test_main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  router.tsx
frontend/src/components/donors/: DonorForm.tsx  DonorList.tsx  DuplicateReview.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/donors/: DonorOnboarding.tsx
frontend/src/services/: donorService.ts
